--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -19,7 +21,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.19",
     "vite": "^4.1.0"
   }
 }
